<resources>
    <string name="app_name">madeMeSmile</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_share">Share</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="popular">Most Popular</string>
    <string name="news_feed">News Feed</string>
    <string name="cancle">Cancel</string>
    <string name="hint_share">Write your story...</string>
    <string name="photo">Photo</string>
    <string name="tag">Tag Location</string>
    <string name="facebook_app_id">398207003721961</string>
    <string name="login">Login</string>
    <string name="smile">Smile</string>
    <string name="sad">Sad</string>
    <string name="createloc">Not found!\nDo you want to create location?</string>
    <string name="createpop">Create location</string>
    <string name="namelocation">Location Name</string>
    <string name="addresslocation">Location Address</string>
    <string name="comment">Comment</string>
    <string name="commentsend">Send</string>
    <string name="ok">OK</string>
    <string name="privacy_title">Privacy Settings</string>
    <string name="public_title">Public</string>
    <string name="private_title">Private</string>
    <string name="change_location">Change Location</string>
    <string name="confirm">Confirm</string>
    
    <string-array name="setting">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    
    <string-array name="tabs">
        <item>TAB 1</item>
        <item>TAB 2</item>
        <item>TAB 3</item>
    </string-array>

</resources>
