<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d9d9d9"
    android:orientation="vertical"
    tools:context="com.toocomplicated.mademesmile.Share">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#fabd44"
            android:src="@drawable/share" />

        <Button
            android:id="@+id/buttoncancle"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:background="#fabd44"
            android:text="@string/cancle" />
    </RelativeLayout>

    <EditText
        android:id="@+id/edittext"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_margin="15sp"
        android:background="#ffffff"
        android:gravity="start"
        android:hint="@string/hint_share"
        android:inputType="textCapSentences"
        android:padding="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/privacy_title" />

        <RadioGroup
            android:id="@+id/privacy_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/public_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_title" />

            <RadioButton
                android:id="@+id/private_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_title" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonphoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/photo" />

        <Button
            android:id="@+id/buttontag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/tag" />

        <Button
            android:id="@+id/buttonshare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/share" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.facebook.login.widget.ProfilePictureView
            android:id="@+id/profile_picturetest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            facebook:com_facebook_preset_size="normal">

        </com.facebook.login.widget.ProfilePictureView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/locationview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="20sp" />

            <ScrollView
                android:id="@+id/scroll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/lnrImages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
