<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/button2_2"
            style="@style/Buttonv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_feed"
            android:layout_weight="0.23" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:queryHint="Search naja" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/button2_1"
            style="@style/Buttonv1"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:text="@string/popular" />

        <Button
            android:id="@+id/button1_1"
            style="@style/Buttonv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share" />

        <Button
            android:id="@+id/button2_3"
            style="@style/Buttonv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log out" />

    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="16sp" />

    </LinearLayout>