<!--suppress ALL -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d9d9d9"
    android:orientation="vertical"
    tools:context=".Feed">



    <LinearLayout
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/button1_1"
            style="@style/Buttonv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share" />

        <Button
            android:id="@+id/button1_2"
            style="@style/Buttonv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button1">

        <Button
            android:id="@+id/button2_1"
            style="@style/Buttonv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/popular" />

        <Button
            android:id="@+id/button2_2"
            style="@style/Buttonv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/news_feed" />

        <Button
            android:id="@+id/button2_3"
            style="@style/Buttonv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Logout"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtsearchfeed"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="#ffffff"
            android:padding="10sp"
            android:hint="Search by location.." />
        <ImageButton
            android:id="@+id/search_img_buttonfeed"
            android:layout_width="0.0dip"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:src="@drawable/search"/>


    </LinearLayout>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <view
        android:id="@+id/recycler_view"
        class="android.support.v7.widget.RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    </android.support.v4.widget.SwipeRefreshLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>